1
cc -c modules/compiler/giescript/platform_non_specific/vm.c -o modules/compiler/giescript/platform_non_specific/vm.o -std=c2x -g -pedantic-errors -Wall -Wextra -Werror -Imodules -DGIL_DEBUG -DGIL_TEST_SHOULD_PRINT -MMD -MP -MF modules/compiler/giescript/platform_non_specific/vm.d
modules/compiler/giescript/platform_non_specific/vm.c: In function 'vm__interpret':
modules/compiler/giescript/platform_non_specific/vm.c:82:24: error: incompatible types when assigning to type 'values_stack_t' {aka 'struct values_stack'} from type 'value_t *' {aka 'double *'}
   82 |         self->values = self->values.data;
      |                        ^~~~
modules/compiler/giescript/platform_non_specific/vm.c:99:32: error: incompatible type for argument 2 of 'vm__push'
   99 |                 vm__push(self, memory, imm);
      |                                ^~~~~~
      |                                |
      |                                memory_t * {aka struct memory *}
modules/compiler/giescript/platform_non_specific/vm.c:35:42: note: expected 'value_t' {aka 'double'} but argument is of type 'memory_t *' {aka 'struct memory *'}
   35 | static void vm__push(vm_t* self, value_t value) {
      |                                  ~~~~~~~~^~~~~
modules/compiler/giescript/platform_non_specific/vm.c:99:17: error: too many arguments to function 'vm__push'
   99 |                 vm__push(self, memory, imm);
      |                 ^~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:35:13: note: declared here
   35 | static void vm__push(vm_t* self, value_t value) {
      |             ^~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:104:32: error: incompatible type for argument 2 of 'vm__push'
  104 |                 vm__push(self, memory, imm_long);
      |                                ^~~~~~
      |                                |
      |                                memory_t * {aka struct memory *}
modules/compiler/giescript/platform_non_specific/vm.c:35:42: note: expected 'value_t' {aka 'double'} but argument is of type 'memory_t *' {aka 'struct memory *'}
   35 | static void vm__push(vm_t* self, value_t value) {
      |                                  ~~~~~~~~^~~~~
modules/compiler/giescript/platform_non_specific/vm.c:104:17: error: too many arguments to function 'vm__push'
  104 |                 vm__push(self, memory, imm_long);
      |                 ^~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:35:13: note: declared here
   35 | static void vm__push(vm_t* self, value_t value) {
      |             ^~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:108:32: error: incompatible type for argument 2 of 'vm__push'
  108 |                 vm__push(self, memory, -value);
      |                                ^~~~~~
      |                                |
      |                                memory_t * {aka struct memory *}
modules/compiler/giescript/platform_non_specific/vm.c:35:42: note: expected 'value_t' {aka 'double'} but argument is of type 'memory_t *' {aka 'struct memory *'}
   35 | static void vm__push(vm_t* self, value_t value) {
      |                                  ~~~~~~~~^~~~~
modules/compiler/giescript/platform_non_specific/vm.c:108:17: error: too many arguments to function 'vm__push'
  108 |                 vm__push(self, memory, -value);
      |                 ^~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:35:13: note: declared here
   35 | static void vm__push(vm_t* self, value_t value) {
      |             ^~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:73:20: error: incompatible type for argument 2 of 'vm__push'
   73 |     vm__push(self, memory, left op right); \
      |                    ^~~~~~
      |                    |
      |                    memory_t * {aka struct memory *}
modules/compiler/giescript/platform_non_specific/vm.c:111:17: note: in expansion of macro 'INS_BINARY'
  111 |                 INS_BINARY(+);
      |                 ^~~~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:35:42: note: expected 'value_t' {aka 'double'} but argument is of type 'memory_t *' {aka 'struct memory *'}
   35 | static void vm__push(vm_t* self, value_t value) {
      |                                  ~~~~~~~~^~~~~
modules/compiler/giescript/platform_non_specific/vm.c:73:5: error: too many arguments to function 'vm__push'
   73 |     vm__push(self, memory, left op right); \
      |     ^~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:111:17: note: in expansion of macro 'INS_BINARY'
  111 |                 INS_BINARY(+);
      |                 ^~~~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:35:13: note: declared here
   35 | static void vm__push(vm_t* self, value_t value) {
      |             ^~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:73:20: error: incompatible type for argument 2 of 'vm__push'
   73 |     vm__push(self, memory, left op right); \
      |                    ^~~~~~
      |                    |
      |                    memory_t * {aka struct memory *}
modules/compiler/giescript/platform_non_specific/vm.c:114:17: note: in expansion of macro 'INS_BINARY'
  114 |                 INS_BINARY(-);
      |                 ^~~~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:35:42: note: expected 'value_t' {aka 'double'} but argument is of type 'memory_t *' {aka 'struct memory *'}
   35 | static void vm__push(vm_t* self, value_t value) {
      |                                  ~~~~~~~~^~~~~
modules/compiler/giescript/platform_non_specific/vm.c:73:5: error: too many arguments to function 'vm__push'
   73 |     vm__push(self, memory, left op right); \
      |     ^~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:114:17: note: in expansion of macro 'INS_BINARY'
  114 |                 INS_BINARY(-);
      |                 ^~~~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:35:13: note: declared here
   35 | static void vm__push(vm_t* self, value_t value) {
      |             ^~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:73:20: error: incompatible type for argument 2 of 'vm__push'
   73 |     vm__push(self, memory, left op right); \
      |                    ^~~~~~
      |                    |
      |                    memory_t * {aka struct memory *}
modules/compiler/giescript/platform_non_specific/vm.c:117:17: note: in expansion of macro 'INS_BINARY'
  117 |                 INS_BINARY(*);
      |                 ^~~~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:35:42: note: expected 'value_t' {aka 'double'} but argument is of type 'memory_t *' {aka 'struct memory *'}
   35 | static void vm__push(vm_t* self, value_t value) {
      |                                  ~~~~~~~~^~~~~
modules/compiler/giescript/platform_non_specific/vm.c:73:5: error: too many arguments to function 'vm__push'
   73 |     vm__push(self, memory, left op right); \
      |     ^~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:117:17: note: in expansion of macro 'INS_BINARY'
  117 |                 INS_BINARY(*);
      |                 ^~~~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:35:13: note: declared here
   35 | static void vm__push(vm_t* self, value_t value) {
      |             ^~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:73:20: error: incompatible type for argument 2 of 'vm__push'
   73 |     vm__push(self, memory, left op right); \
      |                    ^~~~~~
      |                    |
      |                    memory_t * {aka struct memory *}
modules/compiler/giescript/platform_non_specific/vm.c:120:17: note: in expansion of macro 'INS_BINARY'
  120 |                 INS_BINARY(/);
      |                 ^~~~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:35:42: note: expected 'value_t' {aka 'double'} but argument is of type 'memory_t *' {aka 'struct memory *'}
   35 | static void vm__push(vm_t* self, value_t value) {
      |                                  ~~~~~~~~^~~~~
modules/compiler/giescript/platform_non_specific/vm.c:73:5: error: too many arguments to function 'vm__push'
   73 |     vm__push(self, memory, left op right); \
      |     ^~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:120:17: note: in expansion of macro 'INS_BINARY'
  120 |                 INS_BINARY(/);
      |                 ^~~~~~~~~~
modules/compiler/giescript/platform_non_specific/vm.c:35:13: note: declared here
   35 | static void vm__push(vm_t* self, value_t value) {
      |             ^~~~~~~~
make: *** [makefile:17: modules/compiler/giescript/platform_non_specific/vm.o] Error 1
